--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
     "start": "webpack-dev-server --config webpack.config.js --mode development --dev inline-source-map"
   },
   "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
+    "flexbox-react": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
