--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --mode development --dev inline-source-map"
+    "start": "webpack-dev-server --config webpack.config.js --mode development --dev inline-source-map",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
@@ -11,6 +12,8 @@
     "clean-webpack-plugin": "^2.0.1",
     "flexbox-react": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "immutable": "^4.0.0-rc.12",
+    "jest": "^24.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "webpack": "^4.29.6",
